--- a/neural-networks/TensorFlow/models/0-StartHere/TensorFlowIntroduction.ipynb
+++ b/neural-networks/TensorFlow/models/0-StartHere/TensorFlowIntroduction.ipynb
@@ -11,7 +11,10 @@
     "from keras import backend \n",
     "from keras import activations\n",
     "from keras import Sequential\n",
-    "import pydot"
+    "import pydot\n",
+    "import kerastuner as kt\n",
+    "import IPython\n",
+    "import os"
    ]
   },
   {
@@ -449,7 +452,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -613,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,6 +776,354 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Hyperparameter Tuning\n",
+    "\n",
+    "**Hyperparameters** are the variables that govern the training process and the topology of an ML model. These variables remain constant over the training process and directly impact the performance of your ML program. Hyperparameters are of two types:\n",
+    "\n",
+    "    Model hyperparameters: which influence model selection such as the number and width of hidden layers\n",
+    "    Algorithm hyperparameters: which influence the speed and quality of the learning algorithm such as the \n",
+    "                               learning rate for Stochastic Gradient Descent (SGD) and the number of nearest\n",
+    "                               neighbors for a k Nearest Neighbors (KNN) classifier\n",
+    "   \n",
+    "   \n",
+    "The Keras Tuner is a library that helps you pick the optimal set of hyperparameters for your TensorFlow program. The process of selecting the right set of hyperparameters for your machine learning (ML) application is called hyperparameter tuning or hypertuning."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download dataset.\n",
+    "(img_train, label_train), (img_test, label_test) = keras.datasets.fashion_mnist.load_data()\n",
+    "\n",
+    "# Normalize pixel values between 0 and 1\n",
+    "img_train = img_train.astype('float32') / 255.0\n",
+    "img_test = img_test.astype('float32') / 255.0\n",
+    "\n",
+    "def model_builder(hp):\n",
+    "    model = keras.Sequential()\n",
+    "    model.add(keras.layers.Flatten(input_shape=(28, 28)))\n",
+    "\n",
+    "    # Tune the number of units in the first Dense layer\n",
+    "    # Choose an optimal value between 32-512\n",
+    "    hp_units = hp.Int('units', min_value = 32, max_value = 512, step = 32)\n",
+    "    model.add(keras.layers.Dense(units = hp_units, activation = 'relu'))\n",
+    "    model.add(keras.layers.Dense(10))\n",
+    "\n",
+    "    # Tune the learning rate for the optimizer \n",
+    "    # Choose an optimal value from 0.01, 0.001, or 0.0001\n",
+    "    hp_learning_rate = hp.Choice('learning_rate', values = [1e-2, 1e-3, 1e-4]) \n",
+    "\n",
+    "    model.compile(optimizer = keras.optimizers.Adam(learning_rate = hp_learning_rate),\n",
+    "                loss = keras.losses.SparseCategoricalCrossentropy(from_logits = True), \n",
+    "                metrics = ['accuracy'])\n",
+    "\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Instantiate the tuner and perform hypertuning\n",
+    "\n",
+    "Instantiate the tuner to perform the hypertuning. The Keras Tuner has four tuners available - \n",
+    "\n",
+    "        1. RandomSearch\n",
+    "        2. Hyperband\n",
+    "        3. BayesianOptimization\n",
+    "        4. Sklearn. \n",
+    "    \n",
+    "In this tutorial, you use the Hyperband tuner.\n",
+    "\n",
+    "To instantiate the Hyperband tuner, you must specify the hypermodel, the objective to optimize and the maximum number of epochs to train (max_epochs)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tuner = kt.Hyperband(model_builder,\n",
+    "                     objective = 'val_accuracy', \n",
+    "                     max_epochs = 10,\n",
+    "                     factor = 3,\n",
+    "                     directory = '/Users/ukannika/work/artifact-store/htuner',\n",
+    "                     project_name = 'intro_to_kt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before running the hyperparameter search, define a callback to clear the training outputs at the end of every training step.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ClearTrainingOutput(tf.keras.callbacks.Callback):\n",
+    "    def on_train_end(*args, **kwargs):\n",
+    "        IPython.display.clear_output(wait = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tuner.search(img_train, label_train, epochs = 10, validation_data = (img_test, label_test), callbacks = [ClearTrainingOutput()])\n",
+    "\n",
+    "# Get the optimal hyperparameters\n",
+    "best_hps = tuner.get_best_hyperparameters(num_trials = 1)[0]\n",
+    "\n",
+    "print(f\"\"\"\n",
+    "The hyperparameter search is complete. The optimal number of units in the first densely-connected\n",
+    "layer is {best_hps.get('units')} and the optimal learning rate for the optimizer\n",
+    "is {best_hps.get('learning_rate')}.\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save and Load ML Models\n",
+    "\n",
+    "Model progress can be saved during and after training. This means a model can resume where it left off and avoid long training times. Saving also means you can share your model and others can recreate your work. When publishing research models and techniques, most machine learning practitioners share:\n",
+    "\n",
+    "    code to create the model, and\n",
+    "    the trained weights, or parameters, for the model\n",
+    "    \n",
+    "    \n",
+    "Sharing this data helps others understand how the model works and try it themselves with new data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**You can save and load a model in the SavedModel format using the following APIs:**\n",
+    "\n",
+    "**Low-level** tf.saved_model API. This document describes how to use this API in detail.\n",
+    "\n",
+    "    Save: tf.saved_model.save(model, path_to_dir)\n",
+    "    Load: model = tf.saved_model.load(path_to_dir)\n",
+    "    \n",
+    "    \n",
+    "**High-level** tf.keras.Model API. Refer to the keras save and serialize guide.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data Preparation:\n",
+    "(train_images, train_labels), (test_images, test_labels) = tf.keras.datasets.mnist.load_data()\n",
+    "\n",
+    "train_labels = train_labels[:1000]\n",
+    "test_labels = test_labels[:1000]\n",
+    "\n",
+    "train_images = train_images[:1000].reshape(-1, 28 * 28) / 255.0\n",
+    "test_images = test_images[:1000].reshape(-1, 28 * 28) / 255.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a simple sequential model\n",
+    "def create_model():\n",
+    "    model = tf.keras.models.Sequential([\n",
+    "        keras.layers.Dense(512, activation='relu', input_shape=(784,)),\n",
+    "        keras.layers.Dropout(0.2),\n",
+    "        keras.layers.Dense(10)\n",
+    "      ])\n",
+    "\n",
+    "    model.compile(optimizer='adam',\n",
+    "                loss=tf.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "                metrics=[tf.metrics.SparseCategoricalAccuracy()])\n",
+    "\n",
+    "    return model\n",
+    "\n",
+    "# Create a basic model instance\n",
+    "model = create_model()\n",
+    "\n",
+    "# Display the model's architecture\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save checkpoints during training\n",
+    "\n",
+    "You can use a trained model without having to retrain it, or pick-up training where you left off in case the training process was interrupted. The tf.keras.callbacks.ModelCheckpoint callback allows you to continually save the model both during and at the end of training."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define where you want to store the checkpoints\n",
+    "checkpoint_path = \"/tmp/training_1/cp.ckpt\"\n",
+    "checkpoint_dir = os.path.dirname(checkpoint_path)\n",
+    "\n",
+    "# Create a callback that saves the model's weights \n",
+    "# Here the callback saves the model after each epoch. Look at docs for more variables. \n",
+    "cp_callback = tf.keras.callbacks.ModelCheckpoint(filepath=checkpoint_path,\n",
+    "                                                 save_weights_only=True,\n",
+    "                                                 verbose=1)\n",
+    "\n",
+    "# Train the model with the new callback\n",
+    "model.fit(train_images, \n",
+    "          train_labels,  \n",
+    "          epochs=10,\n",
+    "          validation_data=(test_images, test_labels),\n",
+    "          callbacks=[cp_callback])  # Pass callback to training\n",
+    "# This may generate warnings related to saving the state of the optimizer.\n",
+    "# These warnings (and similar warnings throughout this notebook)\n",
+    "# are in place to discourage outdated usage, and can be ignored."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a basic model instance\n",
+    "model1 = create_model()\n",
+    "\n",
+    "# Evaluate the model\n",
+    "loss, acc = model1.evaluate(test_images, test_labels, verbose=2)\n",
+    "print(\"Untrained model, accuracy: {:5.2f}%\".format(100 * acc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loads the weights\n",
+    "model.load_weights(checkpoint_path)\n",
+    "\n",
+    "# Re-evaluate the model\n",
+    "loss, acc = model.evaluate(test_images, test_labels, verbose=2)\n",
+    "print(\"Restored model, accuracy: {:5.2f}%\".format(100 * acc))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Manually save weights after training\n",
+    "\n",
+    "Manually saving weights with the Model.save_weights method. By default, tf.keras—and save_weights in particular—uses the TensorFlow checkpoint format with a .ckpt extension (saving in HDF5 with a .h5 extension is covered in the Save and serialize models guide)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the weights\n",
+    "model.save_weights('/tmp/checkpoints/my_checkpoint')\n",
+    "\n",
+    "# Create a new model instance\n",
+    "model = create_model()\n",
+    "\n",
+    "# Restore the weights\n",
+    "model.load_weights('/tmp/checkpoints/my_checkpoint')\n",
+    "\n",
+    "# Evaluate the model\n",
+    "loss, acc = model.evaluate(test_images, test_labels, verbose=2)\n",
+    "print(\"Restored model, accuracy: {:5.2f}%\".format(100 * acc))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save the entire model\n",
+    "\n",
+    "Call model.save to save a model's architecture, weights, and training configuration in a single file/folder. This allows you to export a model so it can be used without access to the original Python code*. Since the optimizer-state is recovered, you can resume training from exactly where you left off.\n",
+    "\n",
+    "An entire model can be saved in two different file formats (SavedModel and HDF5). The TensorFlow SavedModel format is the default file format in TF2.x. However, models can be saved in HDF5 format. More details on saving entire models in the two file formats is described below.\n",
+    "\n",
+    "Saving a fully-functional model is very useful—you can load them in TensorFlow.js (Saved Model, HDF5) and then train and run them in web browsers, or convert them to run on mobile devices using TensorFlow Lite (Saved Model, HDF5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### SavedModel format\n",
+    "\n",
+    "The SavedModel format is another way to serialize models. Models saved in this format can be restored using tf.keras.models.load_model and are compatible with TensorFlow Serving. The SavedModel guide goes into detail about how to serve/inspect the SavedModel. The section below illustrates the steps to save and restore the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create and train a new model instance.\n",
+    "model = create_model()\n",
+    "model.fit(train_images, train_labels, epochs=5)\n",
+    "\n",
+    "# Save the entire model as a SavedModel.\n",
+    "model.save('/tmp/saved_model/my_model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Reload a fresh Keras model from the saved model:\n",
+    "new_model = tf.keras.models.load_model('/tmp/saved_model/my_model')\n",
+    "\n",
+    "# Check its architecture\n",
+    "new_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluate the restored model\n",
+    "loss, acc = new_model.evaluate(test_images, test_labels, verbose=2)\n",
+    "print('Restored model, accuracy: {:5.2f}%'.format(100 * acc))\n",
+    "\n",
+    "print(new_model.predict(test_images).shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Types Of Applications:\n",
     "    1. Feed Forward Neural Networks [Classfication/Imbalanced Classification, Regression]\n",
     "    2. Word2Vec Semantic Analysis \n",
@@ -785,6 +1135,13 @@
     "    8. Generative Models\n",
     "    9. AutoEncoders/Variational AutoEncoders"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
