--- a/neural-networks/TensorFlow/models/999-DistributedTraining/DistributedTraining.ipynb
+++ b/neural-networks/TensorFlow/models/999-DistributedTraining/DistributedTraining.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,164 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Using tf.distribute.Strategy with tf.keras.Model.fit\n"
+    "**Types of strategies:**\n",
+    "\n",
+    "    1. MirroredStrategy\t\n",
+    "    2. TPUStrategy\t\n",
+    "    3. MultiWorkerMirroredStrategy\t\n",
+    "    4. CentralStorageStrategy\t\n",
+    "    5. ParameterServerStrategy\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's look into one of the strategy. [MirroredStrategy]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**MirroredVariable**\n",
+    "\n",
+    "A variable created under a MirroredStrategy is a MirroredVariable.\n",
+    "\n",
+    "While using distribution strategies, all the variable creation should be done within the strategy's scope. This will replicate the variables across all the replicas and keep them in sync using an all-reduce algorithm.\n",
+    "\n",
+    "Variables created inside a MirroredStrategy which is wrapped with a tf.function are still MirroredVariables.\n",
+    "\n",
+    "\n",
+    "devices\t=> a list of device strings such as ['/gpu:0', '/gpu:1']. If None, all available GPUs are used. If no GPUs are found, CPU is used."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Some requested devices in `tf.distribute.Strategy` are not visible to TensorFlow: /job:localhost/replica:0/task:0/device:GPU:0,/job:localhost/replica:0/task:0/device:GPU:2,/job:localhost/replica:0/task:0/device:GPU:1\n",
+      "INFO:tensorflow:Using MirroredStrategy with devices ('/job:localhost/replica:0/task:0/device:GPU:0', '/job:localhost/replica:0/task:0/device:GPU:1', '/job:localhost/replica:0/task:0/device:GPU:2')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MirroredVariable:{\n",
+       "  0: <tf.Variable 'Variable:0' shape=() dtype=float32, numpy=1.0>,\n",
+       "  1: <tf.Variable 'Variable/replica_1:0' shape=() dtype=float32, numpy=1.0>,\n",
+       "  2: <tf.Variable 'Variable/replica_2:0' shape=() dtype=float32, numpy=1.0>\n",
+       "}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "strategy = tf.distribute.MirroredStrategy(devices = [\"GPU:0\", \"GPU:1\", \"GPU:2\"])\n",
+    "\n",
+    "with strategy.scope():\n",
+    "    x = tf.Variable(1.)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Shard Input Data Per Replica**\n",
+    "\n",
+    "Two Methods are provided to shard the data for per replica bases. \n",
+    "    \n",
+    "    # Option 1:\n",
+    "    distribute_datasets_from_function(\n",
+    "        dataset_fn, options=None\n",
+    "    )\n",
+    "\n",
+    "    The argument dataset_fn that users pass in is an input function that has a tf.distribute.InputContext argument\n",
+    "    and returns a tf.data.Dataset instance. It is expected that the returned dataset from dataset_fn is already \n",
+    "    batched by per-replica batch size (i.e. global batch size divided by the number of replicas in sync) and sharded.\n",
+    "\n",
+    "\n",
+    "    # Option 2:\n",
+    "    experimental_distribute_dataset(\n",
+    "        dataset, options=None\n",
+    "    )\n",
+    "\n",
+    "    dataset is batched by global_batch_size, and calling experimental_distribute_dataset on it rebatches dataset to\n",
+    "    a new batch size that is equal to the global batch size divided by the number of replicas in sync. We iterate \n",
+    "    through it using a Pythonic for loop. x is a tf.distribute.DistributedValues containing data for all replicas,\n",
+    "    and each replica gets data of the new batch size. tf.distribute.Strategy.run will take care of feeding the \n",
+    "    right per-replica data in x to the right replica_fn executed on each replica.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Some requested devices in `tf.distribute.Strategy` are not visible to TensorFlow: /job:localhost/replica:0/task:0/device:GPU:0,/job:localhost/replica:0/task:0/device:GPU:2,/job:localhost/replica:0/task:0/device:GPU:1\n",
+      "INFO:tensorflow:Using MirroredStrategy with devices ('/job:localhost/replica:0/task:0/device:GPU:0', '/job:localhost/replica:0/task:0/device:GPU:1', '/job:localhost/replica:0/task:0/device:GPU:2')\n",
+      "[PerReplica:{\n",
+      "  0: <tf.Tensor: shape=(4,), dtype=int64, numpy=array([0, 2, 4, 6])>,\n",
+      "  1: <tf.Tensor: shape=(4,), dtype=int64, numpy=array([ 8, 10, 12, 14])>,\n",
+      "  2: <tf.Tensor: shape=(2,), dtype=int64, numpy=array([16, 18])>\n",
+      "}, PerReplica:{\n",
+      "  0: <tf.Tensor: shape=(4,), dtype=int64, numpy=array([20, 22, 24, 26])>,\n",
+      "  1: <tf.Tensor: shape=(4,), dtype=int64, numpy=array([28, 30, 32, 34])>,\n",
+      "  2: <tf.Tensor: shape=(2,), dtype=int64, numpy=array([36, 38])>\n",
+      "}, PerReplica:{\n",
+      "  0: <tf.Tensor: shape=(4,), dtype=int64, numpy=array([40, 42, 44, 46])>,\n",
+      "  1: <tf.Tensor: shape=(4,), dtype=int64, numpy=array([48, 50, 52, 54])>,\n",
+      "  2: <tf.Tensor: shape=(2,), dtype=int64, numpy=array([56, 58])>\n",
+      "}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "global_batch_size = 10\n",
+    "\n",
+    "# Passing the devices is optional.\n",
+    "strategy = tf.distribute.MirroredStrategy(devices=[\"GPU:0\", \"GPU:1\", \"GPU:2\"])\n",
+    "\n",
+    "# Create a dataset\n",
+    "dataset = tf.data.Dataset.range(30).batch(global_batch_size)\n",
+    "\n",
+    "# Distribute that dataset\n",
+    "dist_dataset = strategy.experimental_distribute_dataset(dataset)\n",
+    "\n",
+    "@tf.function\n",
+    "def replica_fn(input):\n",
+    "    return input*2\n",
+    "\n",
+    "result = []\n",
+    "# Iterate over the `tf.distribute.DistributedDataset`\n",
+    "for x in dist_dataset:\n",
+    "  # process dataset elements\n",
+    "  result.append(strategy.run(replica_fn, args=(x,)))\n",
+    "    \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Using tf.distribute.Strategy with tf.keras.Model.fit\n",
+    "\n",
+    "Keras model or estimator are distribute aware. So no need to explicitly shard the data. \n"
    ]
   },
   {
@@ -555,6 +712,36 @@
    "metadata": {},
    "source": [
     "##### Using tf.distribute.Strategy with Estimator\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Using tf.distribute.Strategy with custom training loops\n",
+    "\n",
+    "If you need more flexibility and control over your training loops than is possible with Estimator or Keras, you can write custom training loops. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TF_CONFIG "
    ]
   },
   {
